@@ -2,6 +2,30 @@
 
 
 tasks.withType(PublishToMavenRepository).configureEach { it.enabled = false }
+/* Parametre de compilation java */
+compileJava {
+    // To enable argument names in reporting and debugging
+    options.compilerArgs += '-parameters'
+    options.compilerArgs += '--enable-preview'
+}
+
+compileTestJava {
+    // To enable argument names in reporting and debugging
+    options.compilerArgs += '-parameters'
+    options.compilerArgs += '--enable-preview'
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
 
 dependencies {
 
